[imad-console] Updates ui/article-gh.html

--- a/ui/article-gh.html
+++ b/ui/article-gh.html
@@ -1,2 +1,19 @@
 <html>
+    <head>
+        <title>
+            PAGE ONE
+        </title>
+        <body>
+            <div>
+                <a href='/'>HOME</a>
+            </div>
+            <script>
+                alert(ENTER VALID CREDENTIALS!!!!!!);
+            </script>
+            <h3>
+                PAGE 1 is HERE
+            </h3>
+            <div>
+                <p>PAGE one is the LOG IN page!!!!!!! 
+            </div>
 </html>
