[imad-console] Updates ui/article-gh.html

--- a/ui/article-gh.html
+++ b/ui/article-gh.html
@@ -1,5 +1,5 @@
 <html>
-    <head>
+    <head></head>
         <title>
             PAGE ONE
         </title>
@@ -16,4 +16,5 @@
             <div>
                 <p>PAGE one is the LOG IN page!!!!!!! 
             </div>
+        </body>
 </html>
