[imad-console] Updates ui/article-gh.html

--- a/ui/article-gh.html
+++ b/ui/article-gh.html
@@ -8,7 +8,7 @@
                 <a href='/'>HOME</a>
             </div>
             <script>
-                alert(ENTER VALID CREDENTIALS!!!!!!);
+                alert("ENTER VALID CREDENTIALS!!!!!!");
             </script>
             <h3>
                 PAGE 1 is HERE
