[imad-console] Updates ui/article-gh.html

--- a/ui/article-gh.html
+++ b/ui/article-gh.html
@@ -10,6 +10,8 @@
             <script>
                 alert("ENTER VALID CREDENTIALS!!!!!!");
             </script>
+            <script type='text/javascript' src="ui/main.js">
+            </script>
             <h3>
                 PAGE 1 is HERE
             </h3>
